Changed file by adding text for debugging purposes.

--- a/IPone.html
+++ b/IPone.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title></title>
+		<title>WELCOME!</title>
 	</head>
 	<body>
-		<p>hi c:</p>
+		<h1>Welcome to my website.</h1>
 	</body>
 </html>
