--- a/IPone.html
+++ b/IPone.html
@@ -2,8 +2,10 @@
 <html>
 	<head>
 		<title>WELCOME!</title>
+		<link href="css/styles.css" rel="stylesheet" type="text/css" media="all">
 	</head>
 	<body>
 		<h1>Welcome to my website.</h1>
+		<p>My name is Kyulu Jonah.</p>
 	</body>
 </html>
