Checking and confirming that index.html is the document being used.

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>WELCOME</title>
+		<title>WELCOMEE</title>
 		<link href="css/styles.css" rel="stylesheet" type="text/css" media="all">
 	</head>
 	<body>
+		<h3>Kyulu Jonah</h3>
 		<h1>Welcome to my website!</h1>
-		<p>My name is Kyulu Jonah.</p>
 	</body>
 </html>
