Added some text and image.

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>WELCOMEE</title>
+		<title>WELCOME</title>
 		<link href="css/styles.css" rel="stylesheet" type="text/css" media="all">
 	</head>
 	<body>
 		<h3>Kyulu Jonah</h3>
 		<h1>Welcome to my website! slap</h1>
+		<img src="images/fotball" alt="a ball that is about to get hit by a flying boot" title="a ball that is about to get hit by a flying boot">
 	</body>
 </html>
