--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 	<body>
 		<h3>Kyulu Jonah</h3>
 		<h1>Welcome to my website! slap</h1>
-		<img src="images/fotball" alt="a ball that is about to get hit by a flying boot" title="a ball that is about to get hit by a flying boot">
+		<img src="images/fotball.jpg" alt="a ball that is about to get hit by a flying boot" title="a ball that is about to get hit by a flying boot">
 	</body>
 </html>
