--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
 	<body>
 		<h3>Kyulu Jonah</h3>
 		<h1>Welcome to my website!</h1>
-		<img src="images/fotball.jpg" alt="a ball that is about to get hit by a flying boot" title="a ball that is about to get hit by a flying boot">
+		<img src="images/fotball.jpg" alt="a ball that is about to get hit by a flying boot" title="a ball that is about to get hit by a flying boot" width="480"height="480">
 		<p>Hello there, thank you for taking your time to check out my website. Here, I will take you through about myself, including my hobbies, my favorite things in life, and the projects that I have been working on.<br>
 		<h4>Football</h4>
 		The picture on the left is nearly half, or to be exact, 40% of my life. I simply adore football, like almost everyone does, though a few might hate it but for whatever reason they do, that would be really mysterious. 
 
 		<h4>Education</h4>
-		I have completed high school, in a system known as A.C.E (Accelerated Christian Education), a system that allows the student to complete his studies at his own pace, instead of the local system 8.4.4 where a teacher demonstrates to an entire class, which some might not be able to understand or here the teacher depending on the size of the classroom or the audibility of the teacher. In A.C.E, a booklet, commonly known as a PACE, is distributed for each core subject, and electives. (The term electives referres to non-core subjects which may still be compulsory depending on other terms). Core-subjects are Math, English, Literature, Social Studies, Science, Word Building, etc... Examples of elective subjects are Spanish, French, Nutrition Science, Auto-Mechanics, Health, etc... In the A.C.E system, the grades start from 1-12 and only after finishing grade 10, the student may decide to complete his studies there, or at 11. 
+		I have completed high school, in a system known as A.C.E (Accelerated Christian Education), a system that allows the student to complete his studies at his own pace, instead of the local system 8.4.4 where a teacher demonstrates to an entire class, which some might not be able to understand or here the teacher depending on the size of the classroom or the audibility of the teacher. In A.C.E, a booklet, commonly known as a PACE, is distributed for each core subject, and electives. (The term electives referres to non-core subjects which may still be compulsory depending on other terms). Core-subjects are Math, English, Literature, Social Studies, Science, Word Building, etc... Examples of elective subjects are Spanish, French, Nutrition Science, Auto-Mechanics, Health, etc... In the A.C.E system, the grades start from 1-12 and only after finishing grade 10, the student may decide to complete his studies there, or at 11.
+		 
 </html>
