Added job experience, reason for programming, hobbies, skills, and interest section, and information with links of other projects.

--- a/index.html
+++ b/index.html
@@ -10,9 +10,40 @@
 		<img src="images/fotball.jpg" alt="a ball that is about to get hit by a flying boot" title="a ball that is about to get hit by a flying boot" width="480"height="480">
 		<p>Hello there, thank you for taking your time to check out my website. Here, I will take you through about myself, including my hobbies, my favorite things in life, and the projects that I have been working on.<br>
 		<h4>Football</h4>
-		The picture on the left is nearly half, or to be exact, 40% of my life. I simply adore football, like almost everyone does, though a few might hate it but for whatever reason they do, that would be really mysterious. 
+		<p>The picture on the left is nearly half, or to be exact, 40% of my life. I simply adore football, like almost everyone does, though a few might hate it but for whatever reason they do, that would be really mysterious.</p> 
 
 		<h4>Education</h4>
-		I have completed high school, in a system known as A.C.E (Accelerated Christian Education), a system that allows the student to complete his studies at his own pace, instead of the local system 8.4.4 where a teacher demonstrates to an entire class, which some might not be able to understand or here the teacher depending on the size of the classroom or the audibility of the teacher. In A.C.E, a booklet, commonly known as a PACE, is distributed for each core subject, and electives. (The term electives referres to non-core subjects which may still be compulsory depending on other terms). Core-subjects are Math, English, Literature, Social Studies, Science, Word Building, etc... Examples of elective subjects are Spanish, French, Nutrition Science, Auto-Mechanics, Health, etc... In the A.C.E system, the grades start from 1-12 and only after finishing grade 10, the student may decide to complete his studies there, or at 11.
-		 
+		<p>I have completed high school, in a system known as A.C.E (Accelerated Christian Education), a system that allows the student to complete his studies at his own pace, instead of the local system 8.4.4 where a teacher demonstrates to an entire class, which some might not be able to understand or here the teacher depending on the size of the classroom or the audibility of the teacher. In A.C.E, a booklet, commonly known as a PACE, is distributed for each core subject, and electives. (The term electives referres to non-core subjects which may still be compulsory depending on other terms). Core-subjects are Math, English, Literature, Social Studies, Science, Word Building, etc... Examples of elective subjects are Spanish, French, Nutrition Science, Auto-Mechanics, Health, etc... In the A.C.E system, the grades start from 1-12 and only after finishing grade 10, the student may decide to complete his studies there, or at 11.</p>
+
+		<h4>Job Experience</h4>
+			<p>For this, there is not much to state really, but the one thing I have done is volunteered a little for a church called Mavuno CrossRoads in Nairobi. It is within Lavington Primary School.</p>
+
+		<h4>Reason for programming</h4>
+		<strong><p>I chose programming because</strong> I only believe that it is one of the paths I am supposed to take. I mainly chose to program so that I could at least automate my life, but more on my interest to improve my hacking skills. I want to pursue cyber-security for I feel that is as well something that i desire to undertake, having the strength to protect and attack in the digital world.</p>
+		
+		<h4>Hobbies, skills, and interests</h4>
+			<p>Like I mentioned earlier, football is one of my interest, and hobbies and even skills. It usually comes up in my mind several minutes of my life and I could enter a stage of sadness because I haven't played it. My other hobbies, interests, and skills (respectively (according to color schemes)) are:
+				<ul>
+					<li>Cycling</li>
+					<li>Reading young adult sci- fi books</li>
+					<li>Watching sci-fi-horror and natural disaster movies</li>
+					<li>Chess</li>
+					<li>Listening to peacful music</li>
+					<li>Gaming</li>
+					<li>Stock market trading</li>
+					<li>Ice skating</li>
+					<li>Basic Python coding</li>
+		<h4>Projects<h4>
+			<p>A populated list of links will, after clicking, redirect you to the projects in HTML that I have worked on.</p>
+				<ul>
+					<li><a href=""></a></li>
+
+
+
+
+				</ul>
+
+
+
+
 </html>
