--- a/index.html
+++ b/index.html
@@ -36,11 +36,16 @@
 		<h4>Projects<h4>
 			<p>A populated list of links will, after clicking, redirect you to the projects in HTML that I have worked on.</p>
 				<ul>
-					<li><a href=""></a></li>
-
-
-
-
+					<li><a href="https://github.com/cmd33prompt/realnews"></a></li>
+					<li><a href="https://github.com/cmd33prompt/test"></a></li>
+					<li><a href="https://github.com/cmd33prompt/testwebsite2"></a></li>
+					<li><a href="https://github.com/cmd33prompt/doge"></a></li>
+					<li><a href="https://github.com/cmd33prompt/first-website"></a></li>
+					<li><a href="https://github.com/cmd33prompt/first-website"></a></li>
+					<li><a href="https://github.com/cmd33prompt/second-website"></a></li>
+					<li><a href="https://github.com/cmd33prompt/fixing"></li>
+					<li><a href="https://github.com/cmd33prompt/school2"></li>
+					<li><a href="https://github.com/cmd33prompt/school"></li>
 				</ul>
 
 
