moved the closing unordered list tag from the Projects section.

--- a/index.html
+++ b/index.html
@@ -33,19 +33,20 @@
 					<li>Stock market trading</li>
 					<li>Ice skating</li>
 					<li>Basic Python coding</li>
+				</ul>
 		<h4>Projects<h4>
 			<p>A populated list of links will, after clicking, redirect you to the projects in HTML that I have worked on.</p>
 				<ul>
 					<li><a href="https://github.com/cmd33prompt/realnews">Osama bin laden</a></li>
-					<li><a href="https://github.com/cmd33prompt/test"></a>test</li>
+					<li><a href="https://github.com/cmd33prompt/test">test</a></li>
 					<li><a href="https://github.com/cmd33prompt/testwebsite2">website testing</a></li>
-					<li><a href="https://github.com/cmd33prompt/doge"></a>german shepherd</li>
-					<li><a href="https://github.com/cmd33prompt/first-website"></a>first-webpage</li>
-					<li><a href="https://github.com/cmd33prompt/second-website"></a>second-webpage</li>
+					<li><a href="https://github.com/cmd33prompt/doge">german shepherd</a></li>
+					<li><a href="https://github.com/cmd33prompt/first-website">first-webpage</a></li>
+					<li><a href="https://github.com/cmd33prompt/second-website">second-webpage</a></li>
 					<li><a href="https://github.com/cmd33prompt/fixing">fixing</li>
 					<li><a href="https://github.com/cmd33prompt/school2">school2</li>
 					<li><a href="https://github.com/cmd33prompt/school">school</li>
-				</ul>
+				
 
 
 
