Added a little more styling.

--- a/index.html
+++ b/index.html
@@ -1,27 +1,29 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>WELCOME</title>
+		<title>Kyulu Jonah</title>
 		<link href="css/styles.css" rel="stylesheet" type="text/css" media="all">
 	</head>
 	<body>
-	<h3>Kyulu Jonah</h3>
+	<h3></h3>
 
 		<img src="images/fotball.jpg" alt="a ball that is about to get hit by a flying boot" title="a ball that is about to get hit by a flying boot" width="480"height="480">
-			<h6> Hello there, thank you for taking your time to check out my website. Here, I will take you through about myself, including my hobbies, my favorite things in life, and the projects that I have been working on.</p>
-			</h6>
+			<h5>Thank you for taking your time to check out my website. Here, I will take you through about myself, including my hobbies, my favorite things in life, and the projects that I have been working on.</p>
+			</h5>
+		<div class="vl"></div>
 		</span>
 			<div id="spac">
 				<h4>Football</h4>
 					<p>The picture on the left is nearly half, or to be exact, 40% of my life. I really enjoy this sport, despite spraining my ankles sometime. I once had both of mine sprained a total of <strong>  <span class="strong">3 times</span></strong> in less than <em>1 week!!!</em>. That was a really frustrating and weird time in my life, but even after getting injured like that, I never allowed myself time to heal and foolishly continued playing, but today I am free from any form of injuries, though I may admit that I don't have many opportunities to play meaning I rarely can get into a mess. Around 90% and above of Earth's population enjoy the sport. For the remaining percent, thousands of football fans do not know what they are doing with their lives by at most, hating the sport.</p>
 			</div>
 
-
+		<div id="p">
+			<p>ABOUT MYSELF</p>
+		</div>
 		<div class="space">
-			<span id="right">
+
 			<h4>Education</h4>
 				<p>I have completed high school, in a system known as A.C.E (Accelerated Christian Education), a system that allows the student to complete his studies at his own pace, instead of the local system 8.4.4 where a teacher demonstrates to an entire class, which some might not be able to understand or here the teacher depending on the size of the classroom or the audibility of the teacher. In A.C.E, a booklet, commonly known as a PACE, is distributed for each core subject, and electives. (The term electives referres to non-core subjects which may still be compulsory depending on other terms). Core-subjects are Math, English, Literature, Social Studies, Science, Word Building, etc... Examples of elective subjects are Spanish, French, Nutrition Science, Auto-Mechanics, Health, etc... In the A.C.E system, the grades start from 1-12 and only after finishing grade 10, the student may decide to complete his studies there, or at 11.</p>
-			</span>
 			<h4>Job Experience</h4>
 				<p>For this, there is not much to state really, but the one thing I have done is volunteered a little for a church called Mavuno CrossRoads in Nairobi. It is within Lavington Primary School.</p>
 
