--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html>
 	<head>
-<<<<<<< HEAD
-		<title>WELCOME</title>
+		<h1>Kyulu Jonah</h1>
+		<title>Kyulu Jonah</title>
 	</head>
 	<body>
 		<h1>Welcome to my website!</h1>
 	</body>
 =======
-		<title>Kyulu Jonah</title>
 		<link href="css/styles.css" rel="stylesheet" type="text/css" media="all">
 	</head>
 	<body>
